@@ -23,6 +23,7 @@ classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
+   "Programming Language :: Python :: 3.14",
    "Operating System :: Unix",
    "Environment :: Console",
    "Intended Audience :: Developers",
